# rusty-book-manager

./: Cargo.toml  Dockerfile  Makefile.toml  compose.yaml
.github/workflows/: ci.yaml
.zed/: settings.json
adapter/: Cargo.toml
adapter/migrations/: 20241004060032_start.down.sql  20241004060032_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: auth.rs  book.rs  checkout.rs  user.rs
adapter/src/redis/: mod.rs  model.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
adapter/src/repository/fixtures/: book.sql  common.sql
api/: Cargo.toml
api/src/: extractor.rs
api/src/handler/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
api/src/model/: auth.rs  book.rs  checkout.rs  user.rs
api/src/route/: auth.rs  book.rs  health.rs  user.rs  v1.rs
api/tests/api/: book.rs  helper.rs
data/: initial_setup.sql
kernel/: Cargo.toml
kernel/src/model/: id.rs  role.rs
kernel/src/model/book/: event.rs  mod.rs
kernel/src/model/checkout/: event.rs  mod.rs
kernel/src/model/user/: mod.rs
kernel/src/repository/: auth.rs  book.rs  checkout.rs  user.rs
registry/: Cargo.toml
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: config.rs  env.rs  error.rs
