[package]
name = "rusty-book-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "kernel", "adapter", "shared", "registry"]

[workspace.dependencies]
adapter = { path = "./adapter" }
api = { path = "./api" }
async-trait = "0.1.83"
derive-new = "0.7.0"
kernel = { path = "./kernel" }
registry = { path = "./registry" }
shared = { path = "./shared" }

anyhow = "1.0.89"
axum = { version = "0.7.7", features = ["macros"] }
bcrypt = "0.15.1"
garde = { version = "0.20.0", features = ["derive", "email"] }
redis = { version = "0.27.2", features = ["tokio-rustls-comp"] }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

rstest = "0.23.0"

[dependencies]
adapter.workspace = true
api.workspace = true
registry.workspace = true
shared.workspace = true

anyhow.workspace = true
axum.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

[dev-dependencies]
