[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
kernel.workspace = true
registry.workspace = true
shared.workspace = true

anyhow.workspace = true
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
derive-new.workspace = true
garde.workspace = true
serde.workspace = true
strum.workspace = true
uuid.workspace = true
thiserror.workspace = true
